--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -40,4 +40,12 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             class="com.rockerhieu.emojicon.EmojiconsFragment"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:onClick="goShow"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
